Updating landing page     "test-single-run": "npm test -- --single-run",

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -316,7 +316,7 @@ button {
 /* Landing Page */
 .landing {
   position: relative;
-  background: url('./img/show.jpg') no-repeat center center/cover;
+  background: url('./img/show.png') no-repeat center center/cover;
   height: 100vh;
 }
 
