--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -20,7 +20,8 @@ body {
   line-height: 1.6;
   background-color: #fff;
   color: #444;
-  overflow-x: hidden;
+  overflow-x: auto;
+  padding: 10px;
 }
 .modal-body {
   font-size: 0.8rem;
