--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,6 +2,7 @@
 //@import 'styles/main';
 @import 'styles/modal';
 @import 'styles/abstracts/variables';
+@import 'styles/abstracts/mixins';
 @import url('https://fonts.googleapis.com/css?family=Comfortaa|Nanum+Pen+Script&display=swap');
 
 //font-family: 'Comfortaa', cursive;
@@ -30,7 +31,6 @@ body {
 #main {
   float: left;
   margin-left: 20px;
-  min-width: 60%;
 }
 
 a {
@@ -48,7 +48,6 @@ img {
 /* Utilities */
 .container {
   max-width: 1100px;
-  width: 80%;
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
@@ -178,6 +177,11 @@ img {
 .alert-primary {
   background: var(--primary-color);
   color: #fff;
+  &:hover,
+  &:active,
+  &:focus {
+    background: #a10053;
+  }
 }
 
 .btn-light,
