--- a/client/src/components/leftnav/LeftNav.scss
+++ b/client/src/components/leftnav/LeftNav.scss
@@ -1,11 +1,32 @@
-.side-bar-list {
+.leftnav-sidebar {
   width: 200px;
-  height: 100vh;
   /*  background-color: #f7f7f7; */
+  background-color: #f4f5f7;
   &-item {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    &-text {
+      width: 100%;
+      font-size: 12px;
+      padding: 3px 0;
+      a {
+        margin-left: 0.5rem;
+        margin-top: 0.3rem;
+        margin-bottom: 0.5rem;
+        text-decoration: none;
+        color: #757575;
+        display: block;
+        cursor: pointer;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        line-height: normal;
+        &:hover {
+          color: #757575;
+        }
+      }
+    }
     &-content {
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -25,28 +46,6 @@
       margin-right: 6px;
       margin-top: 0.5rem;
       float: left;
-    }
-    &-text {
-      width: 100%;
-      font-size: 14px;
-      padding: 3px 0;
-
-      a {
-        margin-left: 0.5rem;
-        margin-top: 0.5rem;
-        margin-bottom: 0.5rem;
-        text-decoration: none;
-        color: #757575;
-        display: block;
-        cursor: pointer;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        overflow: hidden;
-        line-height: normal;
-        &:hover {
-          color: #757575;
-        }
-      }
     }
   }
 }
