--- a/client/src/components/posts/Posts.scss
+++ b/client/src/components/posts/Posts.scss
@@ -1,14 +1,33 @@
+@import '../../styles/abstracts/mixins';
+
 .post-container {
+  @include respond(tab-land) {
+    font-size: 56.25%;
+    width: 600px;
+  }
+  @include respond(phone) {
+    width: 200px;
+  }
+
   background-color: white;
-  border: 0.5px #dfe1e4 solid;
+  /*   border: 0.5px #dfe1e4 solid;
+ */
   border-radius: 3px;
   margin-bottom: 8px;
-
+  margin-left: 20px;
   .ui.segment {
-    min-height: 400px;
+    //min-height: 400px;
     box-shadow: none;
     border: none;
   }
+
+  /*   @include respond(tab-land) {
+    // width < 1200?
+    font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+  }
+  @media (min-width: 768px) {
+    width: 600px;
+  } */
 }
 .new-post {
   margin-left: 10px;
@@ -18,6 +37,7 @@
   background: var(--primary-color);
   padding: 0.5rem;
 }
+
 /* .ant-tabs {
   &-nav {
     display: flex;
