--- a/client/src/components/layout/headernav/HeaderNav.scss
+++ b/client/src/components/layout/headernav/HeaderNav.scss
@@ -44,7 +44,8 @@
       #8d0b93 0%,
       #321575 100%
     ); */
-    background: linear-gradient(5deg, #e00083 0%, #333 100%);
+    background: linear-gradient(5deg, #2bb5d0 0%, #178297 100%);
+    //background: linear-gradient(5deg, #e00083 0%, #333 100%);
     //background: linear-gradient(-45deg, #0982a7, hsla(218, 100%, 26%, 1));
     color: #fff;
     z-index: 9996;
