--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -2,7 +2,11 @@ $mainColor: #fff;
 
 :root {
   /*--primary-color: #fc6459;*/
-  --primary-color: #e00083;
+  --primary-color: #ff5a5f;
+  --primary-btn-color: #0892ab;
+  --secondary-btn-color: #178297;
+
+  // --primary-color: #e00083;
   --secondary-color: #0892ab;
   /*--tertiary-color: #ff5a5f;*/
   --tertiary-color: #e00083;
