--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $mainColor: #fff;
   --primary-color: #45b3e0;
   //--primary-btn-color: #0892ab;
   --primary-btn-color: #45b3e0;
+  --primary-btn-hover-color: #0892ab;
   --secondary-btn-color: #87ceeb;
 
   // --primary-color: #e00083;
@@ -18,6 +19,7 @@ $mainColor: #fff;
   --success-color: #28a745;
   --white-color: #fff;
   --light-grey-color: #bbb;
+  --large-text-color: #444;
   --large-text-color: #444;
 }
 
