--- a/client/src/components/groups/modal/CreateGroupModal.scss
+++ b/client/src/components/groups/modal/CreateGroupModal.scss
@@ -3,7 +3,28 @@
   padding: 0 !important;
   margin: 0 !important;
 }
+.create-group-btn {
+  background: var(--primary-btn-color);
+  color: floralwhite;
+  display: inline-block;
+  padding: 0.4rem 0.8rem;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s ease-in;
+  outline: none;
+  &:hover,
+  &:active,
+  &:focus {
+    background: var(--primary-btn-hover-color);
+    border: none;
+  }
+}
 .create-group-modal {
+  .css-glamorous-button--1hci1v9 {
+    top: 5px;
+  }
   .action-btn-wrapper {
     display: flex;
     flex-wrap: wrap;
@@ -14,9 +35,20 @@
     border-bottom-right-radius: calc(0.3rem - 1px);
     border-bottom-left-radius: calc(0.3rem - 1px);
   }
-  .pinkBtn {
-    background: var(--primary-color);
-    color: #fff;
+
+  .ant-form-item {
+    margin-bottom: 10px;
+  }
+  .ant-form-item-label {
+    padding: 0 0 3px !important;
+    label {
+      height: 10px;
+    }
+  }
+
+  .create-group-btn {
+    background: var(--primary-btn-color);
+    color: floralwhite;
     display: inline-block;
     padding: 0.4rem 0.8rem;
     font-size: 1rem;
@@ -28,8 +60,8 @@
     &:hover,
     &:active,
     &:focus {
-      background: #a10053;
-      color: #fff;
+      background: var(--primary-btn-hover-color);
+      border: none;
     }
   }
   &-field {
