--- a/client/src/components/leftnav/LeftNav.scss
+++ b/client/src/components/leftnav/LeftNav.scss
@@ -2,7 +2,7 @@
 
 .leftnav-sidebar {
   /*  background-color: #f7f7f7; */
-  background-color: var(--color-rank-5);
+  background-color: var(--bg-leftnav-sidebar);
 
   //background-color: #f4f5f7;
   &-item {
