--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -26,6 +26,8 @@ $mainColor: #fff;
   --color-white: floralwhite;
   --color-header-hover: #444;
   --color-primary-text: #444;
+  --color-secondary-text: #4a4a4a;
+
   --color-primary-btn-hover: floralwhite;
   --bg-primary-btn-hover: #45b3e0;
   --bg-primary-btn: #45b3e0;
