--- a/frontend/src/components/posts/Posts.scss
+++ b/frontend/src/components/posts/Posts.scss
@@ -6,3 +6,12 @@
   background: var(--primary-color);
   padding: 0.5rem;
 }
+.infinite-scroll-wrapper {
+  flex: 1 1 auto;
+  .content-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 0 25px;
+  }
+}
