--- a/frontend/src/components/topnavbar/TopNavbar.scss
+++ b/frontend/src/components/topnavbar/TopNavbar.scss
@@ -41,7 +41,7 @@
   float: left;
   //background: var(--clazzbuddy-color) !important;
   .logo {
-    background: url('../../assets/images/logo.png') center no-repeat;
+    background: url('../../assets/images/klasspalslogo.png') center no-repeat;
     .logo-text {
       display: inline-block;
       font-family: Norther-Lights;
