--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -81,7 +81,7 @@ $mainColor: #fff;
   --font-color-1: floralwhite;
   --font-color-2: #444;
   --font-color-3: #757575;
-
+  --error-color: #cc0000;
   //additional
   --bg: #1d1e2a !important;
   /*  main   */
